@@ -27,6 +27,7 @@
 
 #include <Rcpp/sugar/functions/SugarBlock.h>
 #include <Rcpp/sugar/functions/gamma.h>
+#include <Rcpp/sugar/functions/math.h>
 
 #include <Rcpp/sugar/functions/any.h>
 #include <Rcpp/sugar/functions/all.h>
